feat (Admin): Implement new functionalities - Add section to approve create businesses - Change variable names for the business graph - Status of pending business - Improve administrator panel interface - Improve panel code